--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-os = "2"
-rdev = "0.5.3"
+rdev = { version = "0.5.3", features = ["serialize"] }
 
 [profile.release]
 panic = "abort" # Strip expensive panic clean-up logic
