--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "format": "prettier --write src"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "@tauri-apps/plugin-os": "~2"
+    "@tauri-apps/api": "2.5.0",
+    "@tauri-apps/plugin-opener": "2.2.7",
+    "@tauri-apps/plugin-os": "2.2.1"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tailwindcss/vite": "^4.1.7",
-    "@tauri-apps/cli": "^2",
-    "lucide-svelte": "^0.511.0",
-    "prettier": "^3.5.3",
-    "prettier-plugin-svelte": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "tailwindcss": "^4.1.7",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3"
+    "@sveltejs/adapter-static": "3.0.8",
+    "@sveltejs/kit": "2.21.1",
+    "@sveltejs/vite-plugin-svelte": "5.0.3",
+    "@tailwindcss/vite": "4.1.7",
+    "@tauri-apps/cli": "2.5.0",
+    "lucide-svelte": "0.511.0",
+    "prettier": "3.5.3",
+    "prettier-plugin-svelte": "3.4.0",
+    "prettier-plugin-tailwindcss": "0.6.11",
+    "svelte": "5.32.1",
+    "svelte-check": "4.2.1",
+    "tailwindcss": "4.1.7",
+    "typescript": "5.8.3",
+    "vite": "6.3.5"
   },
   "trustedDependencies": [
     "@tailwindcss/oxide"
