--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,11 +13,13 @@ tauri-build = { version = "2.2.0", features = [] }
 
 [dependencies]
 tauri = { version = "2.5.1", features = ["tray-icon"] }
-tauri-plugin-opener = "2.2.7"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tauri-plugin-os = "2.2.1"
 rdev = { version = "0.5.3", features = ["serialize"] }
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-single-instance = "2"
 
 [profile.release]
 panic = "abort" # Strip expensive panic clean-up logic
